[project]
name = "soundmate"
requires-python = ">=3.9"
version = "1.0.0"
dependencies = [
    "pydantic-settings==2.9.1",
    "discord.py==2.3.2",
    "lavalink==5.9.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "validators==0.22.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
